--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
     height: 8vh;
     box-sizing: border-box;
     align-items: center;
-    margin-bottom: 3vh;
+    /* margin-bottom: 3vh; */
     padding: 0 5% 0 5%;
 }
 
