--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,4 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 3vh;
+}
+
+.MuiPaper-elevation4 {
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 0%), 0px 4px 5px 0px rgb(0 0 0 / 0%), 0px 1px 10px 0px rgb(0 0 0 / 0%) !important;
+}
+.MuiTab-textColorPrimary.Mui-selected {
+    color: black !important;
+    font-family: "Poppins", sans-serif;
 }
