--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 3vh;
+    margin-bottom: 20vh;
 }
 
 .MuiPaper-elevation4 {
@@ -11,4 +12,8 @@
 .MuiTab-textColorPrimary.Mui-selected {
     color: black !important;
     font-family: "Poppins", sans-serif;
+}
+
+.PrivateTabIndicator-colorPrimary-7 {
+    color: black !important;
 }
