--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@700&display=swap");
-html {
+* {
     scroll-behavior: smooth;
 }
 body {
