--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -23,7 +23,7 @@
 .profile__divider {
     margin: 0;
     border: 0;
-    /* color: rgba(43, 45, 66, 0.32); */
+    color: rgba(43, 45, 66, 0.32);
     background-color: rgba(43, 45, 66, 0.2);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
     width: 90%;
